--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
         <!-- --
         <div
             id="log-panel"
-            style='position: "fixed"; bottom: 0; left: 0; right: 0; height: "120px"; background: "rgba(13,13,13,0.85)"; color: "#e0e0e0"; fontFamily: "Consolas, Courier New", monospace"; fontSize: "12px"; padding: "0.8rem 1rem"; borderTop: "1px solid #333"; overflowY: "auto"; zIndex: 9999; opacity: 0.9; pointerEvents: "auto";'
-        ></div>
-        -->
-        <div
-            id="log-panel"
             style="
                 position: fixed;
                 bottom: 0;
                 left: 0;
                 right: 0;
-                height: 45vh;
+                height: 25vh;
                 background: rgba(40, 40, 40, 0.98);
                 color: #e0e0e0;
                 font-family: &quot;monospace&quot;;
@@ -35,11 +30,11 @@
                 word-break: break-all;
             "
         >
-            <!-- Optional header -->
             <div style="color: #888; font-weight: bold; margin-bottom: 0.6rem">Logs</div>
 
-            <!-- Your log lines will be appended here -->
         </div>
+        -->
+        <!-- line are appened at the end -->
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
